--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@ body {
     display: flex; // Use flexbox for layout
     justify-content: space-between; //equal spacing between the brand + links
     align-items: center; // Center items vertically
-    background-color: #C6E0CD;
+    background-color: #c6e0cd;
 
     .brand {
         font-size: 24px;
