--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #C6E0CD;
+  background-color: #c6e0cd;
 }
 .navbar .brand {
   font-size: 24px;
